<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="Parameters" Id="{8b61567d-5791-41d8-9384-2f35caa305c7}">
    <Declaration><![CDATA[TYPE Parameters :
STRUCT
	PID_CondensePump_Press: aS_PidParameter := (Kp:= 91.7, Ti:= 6.368, Td:= 0.1396, Tn:= 0.078);//(Kp:= 91.7, Ti:= 6.368, Td:= 0.1396, Tn:= 0.078);//(Kp:= 200, Ti:= 33.333, Td:= 0, Tn:= 0.05);
	PID_SupplyPump_Press: aS_PidParameter := (Kp:= 40, Ti:= 10, Td:= 0.05, Tn:= 0.05);//(Kp:= 40, Ti:= 8, Td:= 0.125, Tn:= 0.05);
	//PID_Condenser_Temp: aS_PidParameter := (Kp:= -40, Ti:= 53.333, Td:= 2.5, Tn:= 0.05);
	PID_LPHeater_Temp: aS_PidParameter := (Kp:= 0.015, Ti:= 3, Td:= 0, Tn:= 0.05);//(Kp:= 0.02, Ti:= 6.667, Td:= 2, Tn:= 0.5);
	PID_AirEjector_Temp: aS_PidParameter := (Kp:= 0.025, Ti:= 50, Td:= 0, Tn:= 0.05);//(Kp:= 0.0085, Ti:= 4.048, Td:= 0, Tn:= 0.5);
	PID_HPHeater_Temp: aS_PidParameter := (Kp:= 0.01, Ti:= 20, Td:= 0, Tn:= 0.05);//(Kp:= 0.0103, Ti:= 4.12, Td:= 0, Tn:= 0.5);
	PID_Turbine_Speed: aS_PidParameter := (Kp:= 0.003, Ti:= 30, Td:= 0, Tn:= 0.05);//(Kp:= 0.001, Ti:= 10, Td:= 100, Tn:= 100);
	PID_Boiler_Temp: aS_PidParameter := (Kp:= 8, Ti:= 100, Td:= 0.0625, Tn:= 0.05);//(Kp:= 7, Ti:= 20, Td:= 1.4286, Tn:= 0.05);// //(Kp:= 7, Ti:= 100, Td:= 0, Tn:= 0.05);
	
	MaxSpeed_CondensePump: REAL := 1485;
	MaxSpeed_SupplyPump: REAL := 5645;
	MaxSpeed_CircularPump: REAL := 1500;
	MaxSpeed_InterPump: REAL := 1500;	
	MaxSpeed_ForceFan1: REAL := 1485;
	MaxSpeed_ForceFan2: REAL := 1485;
	MaxSpeed_ForceFan3: REAL := 1485;
	
	Condenser_Htemp: REAL := 50;
	Condenser_Ltemp: REAL := 30;
	
	SampleTime: REAL := 0.1;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>