<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="aS_AutoControl" Id="{3778eaae-88e4-41c4-8e5f-afd374d3343a}">
    <Declaration><![CDATA[TYPE aS_AutoControl :
STRUCT
	Start: BOOL;
	Stop: BOOL;
	Setpoint: LREAL;
	ControlSignal: LREAL;
	Switch: BYTE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>