<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <GVL Name="Interfacex" Id="{a0873a74-9354-45d6-8d35-c920e367cf21}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	ScadaInterface: MainInterface;
	AutoCtrlCmds: AutoCtrlCmds;
	Parameters: Parameters;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>